Closed
Bug 194636
Opened 22 years ago
Closed 22 years ago
Forwarding binary message produces invalid message
Categories
(MailNews Core :: MIME, defect)
MailNews Core
MIME
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: KaiE, Assigned: KaiE)
Details
(Keywords: regression, Whiteboard: fixed1.3)
Attachments
(1 file)
|
729 bytes,
patch
|
bugzilla
:
review+
sspitzer
:
superreview+
asa
:
approval1.3+
|
Details | Diff | Splinter Review |
This is a regression introduced with bug 161488.
To reproduce this bug, you need a specially prepared message, that is usually
not produced by mail agents, but is valid (and might be sent by other mail agents).
For example, a message, where the single content is an image.
I can send such a message to anybody who wants to test this behaviour, let me know.
Steps to reproduce:
- receive a message that is (e.g.) of content type image/gif
- forward this message to yourself
- receive the message and look at it
Actual behaviour:
- the received message does not display the image
- when doing view source, raw binary data is displayed
Expected behaviour:
The image should get forwarded as base64 and should display fine when received.
| Assignee | ||
Comment 1•22 years ago
|
||
This patch appears to fix the problem for me.
I've tested a variety of messages and all seems to be fine.
The idea of the patch is: When doing forwarding as attachment and having
output_format set to Decrypt-Only, when dealing with an mimeExternalObject, do
not allow to decode (be it base64, uue, etc.), but instead pass through the
external object directly.
| Assignee | ||
Comment 2•22 years ago
|
||
Comment on attachment 115333 [details] [diff] [review]
Patch v1
Can you please review?
Attachment #115333 -
Flags: superreview?(sspitzer)
Attachment #115333 -
Flags: review?(ducarroz)
| Assignee | ||
Updated•22 years ago
|
Keywords: regression
Comment 3•22 years ago
|
||
Comment on attachment 115333 [details] [diff] [review]
Patch v1
sr=sspitzer, but if he as time (he may not), can you get ducarroz to review?
my only request would be before you check in, please add a comment to the code
like:
// for forwarding binary messages, see bug #194636
(no need for a new patch)
Attachment #115333 -
Flags: superreview?(sspitzer) → superreview+
Comment 4•22 years ago
|
||
Comment on attachment 115333 [details] [diff] [review]
Patch v1
R=ducarroz
Attachment #115333 -
Flags: review?(ducarroz) → review+
Comment 5•22 years ago
|
||
thanks for the review, ducarroz. (I know you are busy with other things)
| Assignee | ||
Comment 6•22 years ago
|
||
Patch checked in, marking fixed.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 7•22 years ago
|
||
Comment on attachment 115333 [details] [diff] [review]
Patch v1
Suggesting to fix this regression for the 1.3 release.
Attachment #115333 -
Flags: approval1.3?
Comment 8•22 years ago
|
||
Comment on attachment 115333 [details] [diff] [review]
Patch v1
a=asa (on brhalf of drivers) for checkin to 1.3 branch. Please land this ASAP
and put fixed1.3 in the status whiteboard. Thanks.
Attachment #115333 -
Flags: approval1.3? → approval1.3+
| Assignee | ||
Comment 9•22 years ago
|
||
Fix checked in to 1.3 branch.
| Assignee | ||
Updated•22 years ago
|
Whiteboard: fixed1.3
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•