b=194636 Forwarding binary message produces invalid message r=ducarroz sr=sspitzer